2015-05-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Plaintext.pm: Change a few more function calls not 
	to use method call syntax.
	(convert, _convert_element): Use method call syntax to call 
	_footnotes.  (Mail from Patrice.)

2015-04-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm, tp/Texinfo/Convert/Paragraph.pm,
	tp/Texinfo/Convert/Plaintext.pm:
	Don't use object-oriented method call syntax for functions in 
	same file.

2015-04-29  Karl Berry  <karl@freefriends.org>

	* doc/texinfo.tex (\nonasciistringdefs): make active definitions
	for 80..9f, needed for (e.g.) second byte of UTF-8 sequences.
	Report from Jean-Charles Malahieude, 28 Apr 2015 13:21:10.

2015-04-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Add note about updating DTD version number in 
	configure.ac.  (Thien-Thi Nguyen, bug-texinfo 2015-03-01.)

2015-04-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (converter_initialize)
	<utf-8 output>: Override $self->{'style_map'}->{'dfn'} to use
	directed double quotes.  Use of directed quotes for @dfn 
	suggested by Paul Eggert.

2015-04-22  Karl Berry  <karl@gnu.org>

	* doc/txi-es.tex (\putwordin): new define, as `en'.
	From davidam, help-texinfo 21 Apr 2015 01:38:38.

2015-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Conver/Plaintext.pm (_printindex_formatted): Don't 
	call Texinfo::Convert::Unicode::string_width with the part of 
	the string we have already called it on.

	* tp/Texinfo/Convert/Unicode.pm (unicode_text): Don't normalize 
	return value.

	* tp/Texinfo/Convert/Paragraph.pm (add_text): Don't track 
	"underlying text" separately if it is the same as the text given 
	to be wrapped.

2015-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (count_bytes): Add special handling of 
	case when output encoding is UTF-8, and for other encodings save 
	result of Encode::find_encoding between function calls.
